// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block deletion - deleting the third block using backspace in an empty block positions the caret at the end of the second block as evidenced by typing additional text 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph - caret was here</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting the third block using backspace in an empty block results in two remaining blocks 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting the third block using backspace with block wrapper selection positions the caret at the end of the second block as evidenced by typing additional text 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph - caret was here</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting the third block using backspace with block wrapper selection results in three remaining blocks 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting the third block using the Remove Block menu item positions the caret at the end of the second block as evidenced by typing additional text 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph - caret was here</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting the third block using the Remove Block menu item results in two remaining blocks 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting the third block using the Remove Block shortcut positions the caret at the end of the second block as evidenced by typing additional text 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph - caret was here</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting the third block using the Remove Block shortcut results in two remaining blocks 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting third third and fourth blocks using backspace with multi-block selection positions the caret at the end of the second block as evidenced by typing additional text 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph - caret was here</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting third third and fourth blocks using backspace with multi-block selection results in two remaining blocks 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`block deletion - deleting third third and fourth blocks using backspace with multi-block selection results in two remaining blocks 2`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->"
`;
